<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingStart="16dp"
		android:paddingEnd="16dp">

		<ImageView
			android:layout_width="144dp"
			android:layout_height="144dp"
			android:layout_marginBottom="16dp"
			android:src="@drawable/splash" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/usernameContainer"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:layout_marginBottom="8dp"
			app:errorEnabled="true"
			app:hintEnabled="false">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/usernameEditText"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/background_input_round"
				android:hint="@string/username"
				android:paddingStart="16dp"
				android:paddingEnd="16dp" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/passwordContainer"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:layout_marginBottom="16dp"
			app:errorEnabled="true"
			app:hintEnabled="false"
			app:passwordToggleEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/passwordEditText"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/background_input_round"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:paddingStart="16dp"
				android:paddingEnd="16dp" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/signUpButton"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:background="@drawable/background_button_round"
			android:text="@string/sign_up"
			android:textColor="@color/colorBackground" />
	</LinearLayout>
</ScrollView>
